# Moxin-Studio

./: ADDING_MODELS.md  MLX_MODEL_PLAN.md  README.md  REFACTORING_PLAN.md  VOICE_PLAN.md  build-and-run.sh
.github/workflows/: release.yml
apps/moly-chat/src/screen/: mod.rs
apps/moly-hub/src/screen/: design.rs  mod.rs
apps/moly-settings/src/screen/: design.rs  mod.rs
moly-data/src/: lib.rs  model_runtime_client.rs  models_registry.json  update_checker.rs
moly-shell/: Cargo.toml
moly-shell/resources/: AppIcon.icns
moly-shell/src/: app.rs  main.rs
