[package]
name = "moly-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "moxin-studio"
path = "src/main.rs"

[dependencies]
# Makepad
makepad-widgets.workspace = true

# Internal workspace crates
moly-widgets = { path = "../moly-widgets" }
moly-data = { path = "../moly-data" }

# App crates
moly-chat = { path = "../apps/moly-chat" }
moly-settings = { path = "../apps/moly-settings" }
moly-mcp = { path = "../apps/moly-mcp" }
moly-hub = { path = "../apps/moly-hub" }

# Moly dependencies (needed for some integrations)
moly-kit.workspace = true
aitk.workspace = true
moly-protocol.workspace = true

# Utilities
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true
cfg-if = "1.0.0"
dirs = "5.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.100"
